--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,16 @@
 <head>
   <meta charset="utf-8">
   <title>Project2FrontEnd</title>
-  <base href="/">
+  <base id="baseHref" href="/">
+
+  <script>
+    (function () {
+      let currentPath = window.location.pathname;
+      let baseHref = currentPath.substr(0, currentPath.lastIndexOf("/") + 1);
+      let baseElement = document.getElementById("baseHref");
+      baseElement.setAttribute("href", baseHref);
+    })();
+  </script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
